[FIX] web: adjust bg color for search_panel on mobile
This commit adjusts the search_panel background color so it adapts
correctly to both light and dark modes on mobile.
It only affects the "popover" use case.

task-5121027

closes odoo/odoo#234636

X-original-commit: 0b911f97a383005091948326ac0a81be10e96f7d
Related: odoo/enterprise#98957

--- a/addons/web/static/src/search/search_panel/search_panel.scss
+++ b/addons/web/static/src/search/search_panel/search_panel.scss
@@ -78,3 +78,9 @@
         }
     }
 }
+
+.o_search_panel_section {
+    .o_popover > & .list-group {
+        --#{$prefix}list-group-bg: var(--#{$prefix}popover-bg);
+    }
+}
